--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
-    "babel-plugin-styled-components": "^1.11.1",
-    "emotion": "^10.0.27",
-    "emotion-server": "^10.0.27",
-    "next": "9.5.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "sass": "^1.26.10",
-    "styled-components": "^5.1.1"
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "babel-plugin-styled-components": "^1.12.0",
+    "emotion": "^11.0.0",
+    "emotion-server": "^11.0.0",
+    "next": "10.0.6",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "sass": "^1.32.5",
+    "styled-components": "^5.2.1"
   }
 }
